--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
 .idea
 
-venv
+venv/
 
-__pycache__
+*.pyc
+__pycache__/
+
+instance/
+
+.pytest_cache/
+.coverage
+htmlcov/
+
+dist/
+build/
+*.egg-info/
